//go:build ignore

package contract

import (
	"context"
	"testing"
	"time"

	"github.com/stretchr/testify/mock"
	"github.com/stretchr/testify/suite"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
	"google.golang.org/protobuf/types/known/timestamppb"

	"github.com/yhonda-ohishi/etc_meisai/src/models"
	"github.com/yhonda-ohishi/etc_meisai/src/repositories"
	pb "github.com/yhonda-ohishi/etc_meisai/src/pb"
)

// ImportRepositoryContractSuite defines contract tests for ImportRepository
// These tests verify that any implementation of ImportRepository meets
// the expected behavioral contract for gRPC service compatibility
type ImportRepositoryContractSuite struct {
	suite.Suite
	repository repositories.ImportRepository
}

// TestImportRepositoryContract runs the contract test suite
func TestImportRepositoryContract(t *testing.T) {
	suite.Run(t, new(ImportRepositoryContractSuite))
}

// SetupTest initializes test data before each test
func (suite *ImportRepositoryContractSuite) SetupTest() {
	// Mock repository will be injected by actual implementation tests
	suite.repository = &MockImportRepository{}
}

// TestCreateSessionContract verifies CreateSession method contract
func (suite *ImportRepositoryContractSuite) TestCreateSessionContract() {
	tests := []struct {
		name          string
		input         *models.ImportSession
		expectedError error
		description   string
	}{
		{
			name: "valid_session_creation",
			input: &models.ImportSession{
				ID:          "test-session-123",
				AccountType: "corporate",
				AccountID:   "corp001",
				FileName:    "test_import.csv",
				FileSize:    1024,
				Status:      "pending",
				TotalRows:   100,
				CreatedBy:   "user123",
			},
			expectedError: nil,
			description:   "Should successfully create valid import session",
		},
		{
			name: "nil_input_validation",
			input: nil,
			expectedError: status.Error(codes.InvalidArgument, "session cannot be nil"),
			description: "Should return InvalidArgument error for nil input",
		},
		{
			name: "missing_required_fields",
			input: &models.ImportSession{
				// Missing required fields: ID, AccountType, AccountID
				FileName: "test.csv",
				Status:   "pending",
			},
			expectedError: status.Error(codes.InvalidArgument, "missing required fields"),
			description: "Should validate required fields",
		},
		{
			name: "empty_session_id",
			input: &models.ImportSession{
				ID:          "", // Invalid: empty session ID
				AccountType: "corporate",
				AccountID:   "corp001",
				FileName:    "test.csv",
			},
			expectedError: status.Error(codes.InvalidArgument, "session ID cannot be empty"),
			description: "Should validate session ID is not empty",
		},
		{
			name: "invalid_account_type",
			input: &models.ImportSession{
				ID:          "test-session-124",
				AccountType: "invalid_type", // Invalid account type
				AccountID:   "corp001",
				FileName:    "test.csv",
			},
			expectedError: status.Error(codes.InvalidArgument, "invalid account type"),
			description: "Should validate account type",
		},
		{
			name: "negative_file_size",
			input: &models.ImportSession{
				ID:          "test-session-125",
				AccountType: "corporate",
				AccountID:   "corp001",
				FileName:    "test.csv",
				FileSize:    -100, // Invalid: negative file size
			},
			expectedError: status.Error(codes.InvalidArgument, "file size must be non-negative"),
			description: "Should validate file size is non-negative",
		},
		{
			name: "duplicate_session_id",
			input: &models.ImportSession{
				ID:          "existing-session-id", // Assume this ID already exists
				AccountType: "corporate",
				AccountID:   "corp001",
				FileName:    "test.csv",
				FileSize:    1024,
				Status:      "pending",
			},
			expectedError: status.Error(codes.AlreadyExists, "session with ID already exists"),
			description: "Should prevent duplicate session ID creation",
		},
	}

	for _, tt := range tests {
		suite.Run(tt.name, func() {
			ctx := context.Background()
			err := suite.repository.CreateSession(ctx, tt.input)

			if tt.expectedError != nil {
				suite.Error(err, tt.description)
				suite.Equal(tt.expectedError.Error(), err.Error())
			} else {
				suite.NoError(err, tt.description)
			}
		})
	}
}

// TestGetSessionContract verifies GetSession method contract
func (suite *ImportRepositoryContractSuite) TestGetSessionContract() {
	tests := []struct {
		name          string
		sessionID     string
		expectedError error
		expectResult  bool
		description   string
	}{
		{
			name:          "existing_session_retrieval",
			sessionID:     "existing-session-123",
			expectedError: nil,
			expectResult:  true,
			description:   "Should successfully retrieve existing session",
		},
		{
			name:          "non_existent_session",
			sessionID:     "non-existent-session",
			expectedError: status.Error(codes.NotFound, "session not found"),
			expectResult:  false,
			description:   "Should return NotFound for non-existent session",
		},
		{
			name:          "empty_session_id",
			sessionID:     "",
			expectedError: status.Error(codes.InvalidArgument, "session ID cannot be empty"),
			expectResult:  false,
			description:   "Should validate non-empty session ID",
		},
		{
			name:          "whitespace_session_id",
			sessionID:     "   ",
			expectedError: status.Error(codes.InvalidArgument, "session ID cannot be empty"),
			expectResult:  false,
			description:   "Should reject whitespace-only session ID",
		},
	}

	for _, tt := range tests {
		suite.Run(tt.name, func() {
			ctx := context.Background()
			result, err := suite.repository.GetSession(ctx, tt.sessionID)

			if tt.expectedError != nil {
				suite.Error(err, tt.description)
				suite.Equal(tt.expectedError.Error(), err.Error())
				suite.Nil(result, "Result should be nil on error")
			} else {
				suite.NoError(err, tt.description)
				if tt.expectResult {
					suite.NotNil(result, "Should return valid session")
					suite.Equal(tt.sessionID, result.ID)
				}
			}
		})
	}
}

// TestListSessionsContract verifies ListSessions method contract
func (suite *ImportRepositoryContractSuite) TestListSessionsContract() {
	tests := []struct {
		name          string
		params        repositories.ListImportSessionsParams
		expectedError error
		description   string
	}{
		{
			name: "valid_list_request",
			params: repositories.ListImportSessionsParams{
				Page:     1,
				PageSize: 10,
				SortBy:   "created_at",
				SortOrder: "desc",
			},
			expectedError: nil,
			description:   "Should handle valid list request",
		},
		{
			name: "pagination_validation",
			params: repositories.ListImportSessionsParams{
				Page:     0, // Invalid: should be >= 1
				PageSize: 10,
			},
			expectedError: status.Error(codes.InvalidArgument, "page must be >= 1"),
			description:   "Should validate page number",
		},
		{
			name: "page_size_validation",
			params: repositories.ListImportSessionsParams{
				Page:     1,
				PageSize: 0, // Invalid: should be > 0
			},
			expectedError: status.Error(codes.InvalidArgument, "page_size must be > 0"),
			description:   "Should validate page size",
		},
		{
			name: "max_page_size_validation",
			params: repositories.ListImportSessionsParams{
				Page:     1,
				PageSize: 1001, // Invalid: exceeds maximum
			},
			expectedError: status.Error(codes.InvalidArgument, "page_size exceeds maximum of 1000"),
			description:   "Should enforce maximum page size",
		},
		{
			name: "invalid_sort_field",
			params: repositories.ListImportSessionsParams{
				Page:     1,
				PageSize: 10,
				SortBy:   "invalid_field",
			},
			expectedError: status.Error(codes.InvalidArgument, "invalid sort field"),
			description:   "Should validate sort field",
		},
		{
			name: "valid_filters",
			params: repositories.ListImportSessionsParams{
				Page:        1,
				PageSize:    50,
				AccountType: func() *string { s := "corporate"; return &s }(),
				AccountID:   func() *string { s := "corp001"; return &s }(),
				Status:      func() *string { s := "completed"; return &s }(),
				CreatedBy:   func() *string { s := "user123"; return &s }(),
				SortBy:      "created_at",
				SortOrder:   "asc",
			},
			expectedError: nil,
			description:   "Should handle complex filter combinations",
		},
	}

	for _, tt := range tests {
		suite.Run(tt.name, func() {
			ctx := context.Background()
			sessions, total, err := suite.repository.ListSessions(ctx, tt.params)

			if tt.expectedError != nil {
				suite.Error(err, tt.description)
				suite.Equal(tt.expectedError.Error(), err.Error())
				suite.Nil(sessions, "Sessions should be nil on error")
				suite.Zero(total, "Total should be zero on error")
			} else {
				suite.NoError(err, tt.description)
				suite.NotNil(sessions, "Should return sessions slice")
				suite.GreaterOrEqual(total, int64(0), "Total should be non-negative")
			}
		})
	}
}

// TestRecordOperationsContract verifies record operation contracts
func (suite *ImportRepositoryContractSuite) TestRecordOperationsContract() {
	testRecord := &models.ETCMeisaiRecord{
		Hash:          "import_test_hash",
		Date:          "2024-09-26",
		Time:          "14:30:00",
		EntranceIC:    "東京IC",
		ExitIC:        "大阪IC",
		TollAmount:    1200,
		CarNumber:     "品川123あ4567",
		ETCCardNumber: "1234567890123456",
	}

	suite.Run("create_record_validation", func() {
		ctx := context.Background()

		// Test nil record
		err := suite.repository.CreateRecord(ctx, nil)
		suite.Error(err, "Should reject nil record")

		// Test valid record
		err = suite.repository.CreateRecord(ctx, testRecord)
		suite.NoError(err, "Should accept valid record")
	})

	suite.Run("batch_create_validation", func() {
		ctx := context.Background()

		records := []*models.ETCMeisaiRecord{testRecord}

		// Test empty batch
		err := suite.repository.CreateRecordsBatch(ctx, []*models.ETCMeisaiRecord{})
		suite.Error(err, "Should reject empty batch")

		// Test nil batch
		err = suite.repository.CreateRecordsBatch(ctx, nil)
		suite.Error(err, "Should reject nil batch")

		// Test valid batch
		err = suite.repository.CreateRecordsBatch(ctx, records)
		suite.NoError(err, "Should accept valid batch")
	})

	suite.Run("find_record_by_hash", func() {
		ctx := context.Background()

		// Test empty hash
		record, err := suite.repository.FindRecordByHash(ctx, "")
		suite.Error(err, "Should reject empty hash")
		suite.Nil(record, "Should return nil for invalid hash")

		// Test valid hash
		record, err = suite.repository.FindRecordByHash(ctx, "valid_hash")
		suite.NoError(err, "Should accept valid hash")
	})

	suite.Run("find_duplicate_records", func() {
		ctx := context.Background()

		hashes := []string{"hash1", "hash2", "hash3"}

		// Test empty hash list
		records, err := suite.repository.FindDuplicateRecords(ctx, []string{})
		suite.Error(err, "Should reject empty hash list")
		suite.Nil(records, "Should return nil for empty list")

		// Test valid hash list
		records, err = suite.repository.FindDuplicateRecords(ctx, hashes)
		suite.NoError(err, "Should accept valid hash list")
	})
}

// TestSessionManagementContract verifies session management contracts
func (suite *ImportRepositoryContractSuite) TestSessionManagementContract() {
	testSession := &models.ImportSession{
		ID:          "update-test-session",
		AccountType: "corporate",
		AccountID:   "corp001",
		FileName:    "updated.csv",
		Status:      "processing",
		TotalRows:   200,
		ProcessedRows: 50,
	}

	suite.Run("update_session_validation", func() {
		ctx := context.Background()

		// Test nil session
		err := suite.repository.UpdateSession(ctx, nil)
		suite.Error(err, "Should reject nil session")

		// Test valid session
		err = suite.repository.UpdateSession(ctx, testSession)
		suite.NoError(err, "Should accept valid session")
	})

	suite.Run("cancel_session_validation", func() {
		ctx := context.Background()

		// Test empty session ID
		err := suite.repository.CancelSession(ctx, "")
		suite.Error(err, "Should reject empty session ID")

		// Test valid session ID
		err = suite.repository.CancelSession(ctx, "valid-session-id")
		suite.NoError(err, "Should accept valid session ID")
	})
}

// TestTransactionContract verifies transaction method contracts
func (suite *ImportRepositoryContractSuite) TestTransactionContract() {
	tests := []struct {
		name        string
		operation   func(repo repositories.ImportRepository) error
		expectError bool
		description string
	}{
		{
			name: "successful_transaction",
			operation: func(repo repositories.ImportRepository) error {
				txRepo, err := repo.BeginTx(context.Background())
				if err != nil {
					return err
				}
				return txRepo.CommitTx()
			},
			expectError: false,
			description: "Should handle successful transaction lifecycle",
		},
		{
			name: "rollback_transaction",
			operation: func(repo repositories.ImportRepository) error {
				txRepo, err := repo.BeginTx(context.Background())
				if err != nil {
					return err
				}
				return txRepo.RollbackTx()
			},
			expectError: false,
			description: "Should handle transaction rollback",
		},
		{
			name: "commit_without_transaction",
			operation: func(repo repositories.ImportRepository) error {
				return repo.CommitTx() // Should fail - no active transaction
			},
			expectError: true,
			description: "Should fail when committing without active transaction",
		},
	}

	for _, tt := range tests {
		suite.Run(tt.name, func() {
			err := tt.operation(suite.repository)

			if tt.expectError {
				suite.Error(err, tt.description)
			} else {
				suite.NoError(err, tt.description)
			}
		})
	}
}

// TestHealthCheckContract verifies health check contract
func (suite *ImportRepositoryContractSuite) TestHealthCheckContract() {
	ctx := context.Background()

	// Health check should never return error under normal circumstances
	// and should complete within reasonable time
	err := suite.repository.Ping(ctx)
	suite.NoError(err, "Health check should succeed")
}

// MockImportRepository provides mock implementation for contract testing
type MockImportRepository struct {
	mock.Mock
}

func (m *MockImportRepository) CreateSession(ctx context.Context, session *models.ImportSession) error {
	args := m.Called(ctx, session)
	return args.Error(0)
}

func (m *MockImportRepository) GetSession(ctx context.Context, sessionID string) (*models.ImportSession, error) {
	args := m.Called(ctx, sessionID)
	return args.Get(0).(*models.ImportSession), args.Error(1)
}

func (m *MockImportRepository) UpdateSession(ctx context.Context, session *models.ImportSession) error {
	args := m.Called(ctx, session)
	return args.Error(0)
}

func (m *MockImportRepository) ListSessions(ctx context.Context, params repositories.ListImportSessionsParams) ([]*models.ImportSession, int64, error) {
	args := m.Called(ctx, params)
	return args.Get(0).([]*models.ImportSession), args.Get(1).(int64), args.Error(2)
}

func (m *MockImportRepository) CancelSession(ctx context.Context, sessionID string) error {
	args := m.Called(ctx, sessionID)
	return args.Error(0)
}

func (m *MockImportRepository) CreateRecord(ctx context.Context, record *models.ETCMeisaiRecord) error {
	args := m.Called(ctx, record)
	return args.Error(0)
}

func (m *MockImportRepository) CreateRecordsBatch(ctx context.Context, records []*models.ETCMeisaiRecord) error {
	args := m.Called(ctx, records)
	return args.Error(0)
}

func (m *MockImportRepository) FindRecordByHash(ctx context.Context, hash string) (*models.ETCMeisaiRecord, error) {
	args := m.Called(ctx, hash)
	return args.Get(0).(*models.ETCMeisaiRecord), args.Error(1)
}

func (m *MockImportRepository) FindDuplicateRecords(ctx context.Context, hashes []string) ([]*models.ETCMeisaiRecord, error) {
	args := m.Called(ctx, hashes)
	return args.Get(0).([]*models.ETCMeisaiRecord), args.Error(1)
}

func (m *MockImportRepository) BeginTx(ctx context.Context) (repositories.ImportRepository, error) {
	args := m.Called(ctx)
	return args.Get(0).(repositories.ImportRepository), args.Error(1)
}

func (m *MockImportRepository) CommitTx() error {
	args := m.Called()
	return args.Error(0)
}

func (m *MockImportRepository) RollbackTx() error {
	args := m.Called()
	return args.Error(0)
}

func (m *MockImportRepository) Ping(ctx context.Context) error {
	args := m.Called(ctx)
	return args.Error(0)
}

// TestProtocolBufferCompatibility verifies gRPC message compatibility
func (suite *ImportRepositoryContractSuite) TestProtocolBufferCompatibility() {
	// Verify that models.ImportSession can be converted to/from Protocol Buffer messages
	now := time.Now()
	originalSession := &models.ImportSession{
		ID:            "test-session-pb-123",
		AccountType:   "corporate",
		AccountID:     "corp001",
		FileName:      "test_import.csv",
		FileSize:      2048,
		Status:        "completed",
		TotalRows:     100,
		ProcessedRows: 100,
		SuccessRows:   95,
		ErrorRows:     5,
		DuplicateRows: 0,
		StartedAt:     now,
		CompletedAt:   &now,
		CreatedBy:     "user123",
		CreatedAt:     now,
	}

	// Convert to Protocol Buffer message
	pbSession := &pb.ImportSession{
		Id:            originalSession.ID,
		AccountType:   originalSession.AccountType,
		AccountId:     originalSession.AccountID,
		FileName:      originalSession.FileName,
		FileSize:      originalSession.FileSize,
		Status:        pb.ImportStatus_IMPORT_STATUS_COMPLETED,
		TotalRows:     int32(originalSession.TotalRows),
		ProcessedRows: int32(originalSession.ProcessedRows),
		SuccessRows:   int32(originalSession.SuccessRows),
		ErrorRows:     int32(originalSession.ErrorRows),
		DuplicateRows: int32(originalSession.DuplicateRows),
		StartedAt:     timestamppb.New(originalSession.StartedAt),
		CompletedAt:   timestamppb.New(*originalSession.CompletedAt),
		CreatedBy:     originalSession.CreatedBy,
		CreatedAt:     timestamppb.New(originalSession.CreatedAt),
	}

	// Verify conversion
	suite.NotNil(pbSession, "Protocol Buffer conversion should succeed")
	suite.Equal(originalSession.ID, pbSession.Id)
	suite.Equal(originalSession.AccountType, pbSession.AccountType)
	suite.Equal(originalSession.AccountID, pbSession.AccountId)
	suite.Equal(originalSession.FileName, pbSession.FileName)
	suite.Equal(originalSession.FileSize, pbSession.FileSize)
	suite.Equal(int32(originalSession.TotalRows), pbSession.TotalRows)
	suite.Equal(int32(originalSession.ProcessedRows), pbSession.ProcessedRows)
	suite.Equal(int32(originalSession.SuccessRows), pbSession.SuccessRows)
	suite.Equal(int32(originalSession.ErrorRows), pbSession.ErrorRows)
	suite.Equal(int32(originalSession.DuplicateRows), pbSession.DuplicateRows)
	suite.Equal(originalSession.CreatedBy, pbSession.CreatedBy)

	// Verify timestamp conversion
	suite.True(pbSession.StartedAt.AsTime().Equal(originalSession.StartedAt))
	suite.True(pbSession.CompletedAt.AsTime().Equal(*originalSession.CompletedAt))
	suite.True(pbSession.CreatedAt.AsTime().Equal(originalSession.CreatedAt))
}